@@ -41,7 +41,13 @@ class NameClassMap(object):
         typing.Any,
         typing.Callable[[typing.Any], typing.Any]
     ]
-    _map: typing.Dict[str, typing.Type]
+    _map: typing.Dict[
+        str,
+        typing.Union[
+            typing.Any,
+            typing.Callable[[typing.Any], typing.Any]
+        ]
+    ]
 
     default = property(lambda self: self._default)
 
@@ -61,19 +67,17 @@ class NameClassMap(object):
     def __delitem__(self, key: str) -> None:
         del self._map[key]
 
-    def __getitem__(self, key: str) -> typing.Type:
+    def __getitem__(
+            self, key: str
+    ) -> typing.Union[typing.Type,
+                      typing.Callable[[typing.Any], typing.Any]]:
         return self._map[key]
 
     def __setitem__(self, key: str,
                     value: typing.Union[
-                        typing.Any,
+                        typing.Type[typing.Any],
                         typing.Callable[[typing.Any], typing.Any]
                     ]):
-        if not issubclass(value, self._default):
-            raise ValueError(
-                'The new class must be a subclass of {}'
-                '(and {} is not)'
-                .format(self._default, value))
         self._map[key] = value
 
     def copy(self) -> 'NameClassMap':
@@ -102,7 +106,9 @@ class NameClassMap(object):
                 return k
         return None
 
-    def find(self, keys: typing.Iterable[str]) -> typing.Type:
+    def find(
+            self, keys: typing.Iterable[str]
+    ) -> typing.Union[typing.Type, typing.Callable[[typing.Any], typing.Any]]:
         """Find the first mapping in a sequence of names (keys).
 
         Returns the default class (specified when creating the
@@ -183,8 +189,17 @@ def overlay_converter(src: 'Converter', target: 'Converter') -> None:
         if k is object and v is _rpy2py:
             continue
         target._rpy2py.register(k, v)
-    target._rpy2py_nc_map.update(src._rpy2py_nc_map._map.copy(),
-                                 default=src._rpy2py_nc_map._default)
+    for k, v in src.rpy2py_nc_map.items():
+        if k in target.rpy2py_nc_map:
+            target.rpy2py_nc_map[k].update(
+                v._map.copy(),
+                default=v._default
+            )
+        else:
+            target.rpy2py_nc_map[k] = NameClassMap(
+                v._default,
+                namemap=v._map.copy(),
+            )
 
 
 def _py2rpy(obj):
@@ -223,14 +238,18 @@ class Converter(object):
     different converters.
     """
     _name: str
-    _rpy2py_nc_map: typing.Dict[typing.Type[_rinterface_capi.SupportsSEXP],
-                                NameClassMap]
+    _rpy2py_nc_map: typing.Dict[
+        typing.Type[rpy2.rinterface_lib.sexp.Sexp],
+        NameClassMap
+    ]
     _lineage: typing.Tuple[str, ...]
 
     name = property(lambda self: self._name)
     py2rpy = property(lambda self: self._py2rpy)
     rpy2py = property(lambda self: self._rpy2py)
-    rpy2py_nc_name = property(lambda self: self._rpy2py_nc_map)
+    rpy2py_nc_map = property(lambda self: self._rpy2py_nc_map)
+    # TODO: rpy2py_nc_name should be deprecated.
+    rpy2py_nc_name = rpy2py_nc_map
     lineage = property(lambda self: self._lineage)
 
     def __init__(self, name: str,
@@ -239,8 +258,8 @@ class Converter(object):
         self._name = name
         self._py2rpy = py2rpy
         self._rpy2py = rpy2py
-        self._rpy2py_nc_map = NameClassMap()
-
+        self._rpy2py_nc_map = {}
+        lineage: typing.Tuple[str, ...]
         if template is None:
             lineage = tuple()
         else:
@@ -266,7 +285,7 @@ class Converter(object):
 
     def rclass_map_context(self, cls, d: typing.Dict[str, typing.Type]):
         return NameClassMapContext(
-            self._rpy2py_nc_map[cls],
+            self.rpy2py_nc_map[cls],
             d)
 
 
